logo styling issues on mobile

--- a/style.css
+++ b/style.css
@@ -1911,6 +1911,12 @@ body {
 		}
 	}
 
+	.card-left img {
+		max-height: 100%;
+		object-fit: cover;
+		object-position: center center;
+	}
+
 	.overview,
 	.review-flexbox,
 	.bonus-container,
